Revert "Arreglo de "SimpleDialogueItem""
This reverts commit 75d6f4737ecd35974b17315fefc826df9fac6e66.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "GRAVILIMB.sln"
+    "dotnet.defaultSolution": "GRΛVILIMB.sln"
 }
